src/snapshots/redmine_tui_draft__test_support__journals_list_item_component_state_marker_edited.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 7 }
00: "● aliceが 2026/01/15に 更 新  (edite" | 0:"●" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"a" fg=Blue bg=Reset mod=NONE, 3:"l" fg=Blue bg=Reset mod=NONE, 4:"i" fg=Blue bg=Reset mod=NONE, 5:"c" fg=Blue bg=Reset mod=NONE, 6:"e" fg=Blue bg=Reset mod=NONE, 7:"が" fg=Reset bg=Reset mod=NONE, 9:"2" fg=Blue bg=Reset mod=NONE, 10:"0" fg=Blue bg=Reset mod=NONE, 11:"2" fg=Blue bg=Reset mod=NONE, 12:"6" fg=Blue bg=Reset mod=NONE, 13:"/" fg=Blue bg=Reset mod=NONE, 14:"0" fg=Blue bg=Reset mod=NONE, 15:"1" fg=Blue bg=Reset mod=NONE, 16:"/" fg=Blue bg=Reset mod=NONE, 17:"1" fg=Blue bg=Reset mod=NONE, 18:"5" fg=Blue bg=Reset mod=NONE, 19:"に" fg=Reset bg=Reset mod=NONE, 21:"更" fg=Reset bg=Reset mod=NONE, 23:"新" fg=Reset bg=Reset mod=NONE, 25:" " fg=Yellow bg=Reset mod=NONE, 26:"(" fg=Yellow bg=Reset mod=NONE, 27:"e" fg=Yellow bg=Reset mod=NONE, 28:"d" fg=Yellow bg=Reset mod=NONE, 29:"i" fg=Yellow bg=Reset mod=NONE, 30:"t" fg=Yellow bg=Reset mod=NONE, 31:"e" fg=Yellow bg=Reset mod=NONE
01: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
02: "│   ・  担 当 者  を  (な し ) か ら  use" | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:" " fg=Gray bg=Reset mod=NONE, 3:" " fg=Gray bg=Reset mod=NONE, 4:"・" fg=Gray bg=Reset mod=NONE, 6:" " fg=Gray bg=Reset mod=NONE, 7:"担" fg=Gray bg=Reset mod=BOLD, 9:"当" fg=Gray bg=Reset mod=BOLD, 11:"者" fg=Gray bg=Reset mod=BOLD, 13:" " fg=Gray bg=Reset mod=NONE, 14:"を" fg=Gray bg=Reset mod=NONE, 16:" " fg=Gray bg=Reset mod=NONE, 17:"(" fg=Gray bg=Reset mod=ITALIC, 18:"な" fg=Gray bg=Reset mod=ITALIC, 20:"し" fg=Gray bg=Reset mod=ITALIC, 22:")" fg=Gray bg=Reset mod=ITALIC, 23:" " fg=Gray bg=Reset mod=NONE, 24:"か" fg=Gray bg=Reset mod=NONE, 26:"ら" fg=Gray bg=Reset mod=NONE, 28:" " fg=Gray bg=Reset mod=NONE, 29:"u" fg=Gray bg=Reset mod=ITALIC, 30:"s" fg=Gray bg=Reset mod=ITALIC, 31:"e" fg=Gray bg=Reset mod=ITALIC
03: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
04: "│ edited notes for the marker   " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"e" fg=Reset bg=Reset mod=NONE, 3:"d" fg=Reset bg=Reset mod=NONE, 4:"i" fg=Reset bg=Reset mod=NONE, 5:"t" fg=Reset bg=Reset mod=NONE, 6:"e" fg=Reset bg=Reset mod=NONE, 7:"d" fg=Reset bg=Reset mod=NONE, 9:"n" fg=Reset bg=Reset mod=NONE, 10:"o" fg=Reset bg=Reset mod=NONE, 11:"t" fg=Reset bg=Reset mod=NONE, 12:"e" fg=Reset bg=Reset mod=NONE, 13:"s" fg=Reset bg=Reset mod=NONE, 15:"f" fg=Reset bg=Reset mod=NONE, 16:"o" fg=Reset bg=Reset mod=NONE, 17:"r" fg=Reset bg=Reset mod=NONE, 19:"t" fg=Reset bg=Reset mod=NONE, 20:"h" fg=Reset bg=Reset mod=NONE, 21:"e" fg=Reset bg=Reset mod=NONE, 23:"m" fg=Reset bg=Reset mod=NONE, 24:"a" fg=Reset bg=Reset mod=NONE, 25:"r" fg=Reset bg=Reset mod=NONE, 26:"k" fg=Reset bg=Reset mod=NONE, 27:"e" fg=Reset bg=Reset mod=NONE, 28:"r" fg=Reset bg=Reset mod=NONE
05: "│ snapshot                      " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"s" fg=Reset bg=Reset mod=NONE, 3:"n" fg=Reset bg=Reset mod=NONE, 4:"a" fg=Reset bg=Reset mod=NONE, 5:"p" fg=Reset bg=Reset mod=NONE, 6:"s" fg=Reset bg=Reset mod=NONE, 7:"h" fg=Reset bg=Reset mod=NONE, 8:"o" fg=Reset bg=Reset mod=NONE, 9:"t" fg=Reset bg=Reset mod=NONE
06: "                                "
