src/snapshots/redmine_tui_draft__test_support__journals_list_item_component_unfocused.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 10 }
00: "● aliceが 2026/01/15に 更 新        " | 0:"●" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"a" fg=Blue bg=Reset mod=NONE, 3:"l" fg=Blue bg=Reset mod=NONE, 4:"i" fg=Blue bg=Reset mod=NONE, 5:"c" fg=Blue bg=Reset mod=NONE, 6:"e" fg=Blue bg=Reset mod=NONE, 7:"が" fg=Reset bg=Reset mod=NONE, 9:"2" fg=Blue bg=Reset mod=NONE, 10:"0" fg=Blue bg=Reset mod=NONE, 11:"2" fg=Blue bg=Reset mod=NONE, 12:"6" fg=Blue bg=Reset mod=NONE, 13:"/" fg=Blue bg=Reset mod=NONE, 14:"0" fg=Blue bg=Reset mod=NONE, 15:"1" fg=Blue bg=Reset mod=NONE, 16:"/" fg=Blue bg=Reset mod=NONE, 17:"1" fg=Blue bg=Reset mod=NONE, 18:"5" fg=Blue bg=Reset mod=NONE, 19:"に" fg=Reset bg=Reset mod=NONE, 21:"更" fg=Reset bg=Reset mod=NONE, 23:"新" fg=Reset bg=Reset mod=NONE
01: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
02: "│   ・  ス テ ー タ ス  を  新 規 (new)  " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:" " fg=Gray bg=Reset mod=NONE, 3:" " fg=Gray bg=Reset mod=NONE, 4:"・" fg=Gray bg=Reset mod=NONE, 6:" " fg=Gray bg=Reset mod=NONE, 7:"ス" fg=Gray bg=Reset mod=BOLD, 9:"テ" fg=Gray bg=Reset mod=BOLD, 11:"ー" fg=Gray bg=Reset mod=BOLD, 13:"タ" fg=Gray bg=Reset mod=BOLD, 15:"ス" fg=Gray bg=Reset mod=BOLD, 17:" " fg=Gray bg=Reset mod=NONE, 18:"を" fg=Gray bg=Reset mod=NONE, 20:" " fg=Gray bg=Reset mod=NONE, 21:"新" fg=Gray bg=Reset mod=ITALIC, 23:"規" fg=Gray bg=Reset mod=ITALIC, 25:"(" fg=Gray bg=Reset mod=ITALIC, 26:"n" fg=Gray bg=Reset mod=ITALIC, 27:"e" fg=Gray bg=Reset mod=ITALIC, 28:"w" fg=Gray bg=Reset mod=ITALIC, 29:")" fg=Gray bg=Reset mod=ITALIC, 30:" " fg=Gray bg=Reset mod=NONE
03: "│   ・  担 当 者  を  (な し ) か ら  use" | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:" " fg=Gray bg=Reset mod=NONE, 3:" " fg=Gray bg=Reset mod=NONE, 4:"・" fg=Gray bg=Reset mod=NONE, 6:" " fg=Gray bg=Reset mod=NONE, 7:"担" fg=Gray bg=Reset mod=BOLD, 9:"当" fg=Gray bg=Reset mod=BOLD, 11:"者" fg=Gray bg=Reset mod=BOLD, 13:" " fg=Gray bg=Reset mod=NONE, 14:"を" fg=Gray bg=Reset mod=NONE, 16:" " fg=Gray bg=Reset mod=NONE, 17:"(" fg=Gray bg=Reset mod=ITALIC, 18:"な" fg=Gray bg=Reset mod=ITALIC, 20:"し" fg=Gray bg=Reset mod=ITALIC, 22:")" fg=Gray bg=Reset mod=ITALIC, 23:" " fg=Gray bg=Reset mod=NONE, 24:"か" fg=Gray bg=Reset mod=NONE, 26:"ら" fg=Gray bg=Reset mod=NONE, 28:" " fg=Gray bg=Reset mod=NONE, 29:"u" fg=Gray bg=Reset mod=ITALIC, 30:"s" fg=Gray bg=Reset mod=ITALIC, 31:"e" fg=Gray bg=Reset mod=ITALIC
04: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
05: "│ first paragraph               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"f" fg=Reset bg=Reset mod=NONE, 3:"i" fg=Reset bg=Reset mod=NONE, 4:"r" fg=Reset bg=Reset mod=NONE, 5:"s" fg=Reset bg=Reset mod=NONE, 6:"t" fg=Reset bg=Reset mod=NONE, 8:"p" fg=Reset bg=Reset mod=NONE, 9:"a" fg=Reset bg=Reset mod=NONE, 10:"r" fg=Reset bg=Reset mod=NONE, 11:"a" fg=Reset bg=Reset mod=NONE, 12:"g" fg=Reset bg=Reset mod=NONE, 13:"r" fg=Reset bg=Reset mod=NONE, 14:"a" fg=Reset bg=Reset mod=NONE, 15:"p" fg=Reset bg=Reset mod=NONE, 16:"h" fg=Reset bg=Reset mod=NONE
06: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
07: "│ second paragraph with wrapping" | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"s" fg=Reset bg=Reset mod=NONE, 3:"e" fg=Reset bg=Reset mod=NONE, 4:"c" fg=Reset bg=Reset mod=NONE, 5:"o" fg=Reset bg=Reset mod=NONE, 6:"n" fg=Reset bg=Reset mod=NONE, 7:"d" fg=Reset bg=Reset mod=NONE, 9:"p" fg=Reset bg=Reset mod=NONE, 10:"a" fg=Reset bg=Reset mod=NONE, 11:"r" fg=Reset bg=Reset mod=NONE, 12:"a" fg=Reset bg=Reset mod=NONE, 13:"g" fg=Reset bg=Reset mod=NONE, 14:"r" fg=Reset bg=Reset mod=NONE, 15:"a" fg=Reset bg=Reset mod=NONE, 16:"p" fg=Reset bg=Reset mod=NONE, 17:"h" fg=Reset bg=Reset mod=NONE, 19:"w" fg=Reset bg=Reset mod=NONE, 20:"i" fg=Reset bg=Reset mod=NONE, 21:"t" fg=Reset bg=Reset mod=NONE, 22:"h" fg=Reset bg=Reset mod=NONE, 24:"w" fg=Reset bg=Reset mod=NONE, 25:"r" fg=Reset bg=Reset mod=NONE, 26:"a" fg=Reset bg=Reset mod=NONE, 27:"p" fg=Reset bg=Reset mod=NONE, 28:"p" fg=Reset bg=Reset mod=NONE, 29:"i" fg=Reset bg=Reset mod=NONE, 30:"n" fg=Reset bg=Reset mod=NONE, 31:"g" fg=Reset bg=Reset mod=NONE
08: "│ words                         " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"w" fg=Reset bg=Reset mod=NONE, 3:"o" fg=Reset bg=Reset mod=NONE, 4:"r" fg=Reset bg=Reset mod=NONE, 5:"d" fg=Reset bg=Reset mod=NONE, 6:"s" fg=Reset bg=Reset mod=NONE
09: "                                "
