src/snapshots/redmine_tui_draft__test_support__journals_list_item_component_update_changed_notes.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 8 }
00: "● aliceが 2026/01/15に 更 新        " | 0:"●" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"a" fg=Blue bg=Reset mod=NONE, 3:"l" fg=Blue bg=Reset mod=NONE, 4:"i" fg=Blue bg=Reset mod=NONE, 5:"c" fg=Blue bg=Reset mod=NONE, 6:"e" fg=Blue bg=Reset mod=NONE, 7:"が" fg=Reset bg=Reset mod=NONE, 9:"2" fg=Blue bg=Reset mod=NONE, 10:"0" fg=Blue bg=Reset mod=NONE, 11:"2" fg=Blue bg=Reset mod=NONE, 12:"6" fg=Blue bg=Reset mod=NONE, 13:"/" fg=Blue bg=Reset mod=NONE, 14:"0" fg=Blue bg=Reset mod=NONE, 15:"1" fg=Blue bg=Reset mod=NONE, 16:"/" fg=Blue bg=Reset mod=NONE, 17:"1" fg=Blue bg=Reset mod=NONE, 18:"5" fg=Blue bg=Reset mod=NONE, 19:"に" fg=Reset bg=Reset mod=NONE, 21:"更" fg=Reset bg=Reset mod=NONE, 23:"新" fg=Reset bg=Reset mod=NONE
01: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
02: "│   ・  担 当 者  を  (な し ) か ら  use" | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:" " fg=Gray bg=Reset mod=NONE, 3:" " fg=Gray bg=Reset mod=NONE, 4:"・" fg=Gray bg=Reset mod=NONE, 6:" " fg=Gray bg=Reset mod=NONE, 7:"担" fg=Gray bg=Reset mod=BOLD, 9:"当" fg=Gray bg=Reset mod=BOLD, 11:"者" fg=Gray bg=Reset mod=BOLD, 13:" " fg=Gray bg=Reset mod=NONE, 14:"を" fg=Gray bg=Reset mod=NONE, 16:" " fg=Gray bg=Reset mod=NONE, 17:"(" fg=Gray bg=Reset mod=ITALIC, 18:"な" fg=Gray bg=Reset mod=ITALIC, 20:"し" fg=Gray bg=Reset mod=ITALIC, 22:")" fg=Gray bg=Reset mod=ITALIC, 23:" " fg=Gray bg=Reset mod=NONE, 24:"か" fg=Gray bg=Reset mod=NONE, 26:"ら" fg=Gray bg=Reset mod=NONE, 28:" " fg=Gray bg=Reset mod=NONE, 29:"u" fg=Gray bg=Reset mod=ITALIC, 30:"s" fg=Gray bg=Reset mod=ITALIC, 31:"e" fg=Gray bg=Reset mod=ITALIC
03: "│                               " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE
04: "│ updated notes with enough text" | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"u" fg=Reset bg=Reset mod=NONE, 3:"p" fg=Reset bg=Reset mod=NONE, 4:"d" fg=Reset bg=Reset mod=NONE, 5:"a" fg=Reset bg=Reset mod=NONE, 6:"t" fg=Reset bg=Reset mod=NONE, 7:"e" fg=Reset bg=Reset mod=NONE, 8:"d" fg=Reset bg=Reset mod=NONE, 10:"n" fg=Reset bg=Reset mod=NONE, 11:"o" fg=Reset bg=Reset mod=NONE, 12:"t" fg=Reset bg=Reset mod=NONE, 13:"e" fg=Reset bg=Reset mod=NONE, 14:"s" fg=Reset bg=Reset mod=NONE, 16:"w" fg=Reset bg=Reset mod=NONE, 17:"i" fg=Reset bg=Reset mod=NONE, 18:"t" fg=Reset bg=Reset mod=NONE, 19:"h" fg=Reset bg=Reset mod=NONE, 21:"e" fg=Reset bg=Reset mod=NONE, 22:"n" fg=Reset bg=Reset mod=NONE, 23:"o" fg=Reset bg=Reset mod=NONE, 24:"u" fg=Reset bg=Reset mod=NONE, 25:"g" fg=Reset bg=Reset mod=NONE, 26:"h" fg=Reset bg=Reset mod=NONE, 28:"t" fg=Reset bg=Reset mod=NONE, 29:"e" fg=Reset bg=Reset mod=NONE, 30:"x" fg=Reset bg=Reset mod=NONE, 31:"t" fg=Reset bg=Reset mod=NONE
05: "│ to wrap onto a different set  " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"t" fg=Reset bg=Reset mod=NONE, 3:"o" fg=Reset bg=Reset mod=NONE, 5:"w" fg=Reset bg=Reset mod=NONE, 6:"r" fg=Reset bg=Reset mod=NONE, 7:"a" fg=Reset bg=Reset mod=NONE, 8:"p" fg=Reset bg=Reset mod=NONE, 10:"o" fg=Reset bg=Reset mod=NONE, 11:"n" fg=Reset bg=Reset mod=NONE, 12:"t" fg=Reset bg=Reset mod=NONE, 13:"o" fg=Reset bg=Reset mod=NONE, 15:"a" fg=Reset bg=Reset mod=NONE, 17:"d" fg=Reset bg=Reset mod=NONE, 18:"i" fg=Reset bg=Reset mod=NONE, 19:"f" fg=Reset bg=Reset mod=NONE, 20:"f" fg=Reset bg=Reset mod=NONE, 21:"e" fg=Reset bg=Reset mod=NONE, 22:"r" fg=Reset bg=Reset mod=NONE, 23:"e" fg=Reset bg=Reset mod=NONE, 24:"n" fg=Reset bg=Reset mod=NONE, 25:"t" fg=Reset bg=Reset mod=NONE, 27:"s" fg=Reset bg=Reset mod=NONE, 28:"e" fg=Reset bg=Reset mod=NONE, 29:"t" fg=Reset bg=Reset mod=NONE
06: "│ of rendered lines             " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"o" fg=Reset bg=Reset mod=NONE, 3:"f" fg=Reset bg=Reset mod=NONE, 5:"r" fg=Reset bg=Reset mod=NONE, 6:"e" fg=Reset bg=Reset mod=NONE, 7:"n" fg=Reset bg=Reset mod=NONE, 8:"d" fg=Reset bg=Reset mod=NONE, 9:"e" fg=Reset bg=Reset mod=NONE, 10:"r" fg=Reset bg=Reset mod=NONE, 11:"e" fg=Reset bg=Reset mod=NONE, 12:"d" fg=Reset bg=Reset mod=NONE, 14:"l" fg=Reset bg=Reset mod=NONE, 15:"i" fg=Reset bg=Reset mod=NONE, 16:"n" fg=Reset bg=Reset mod=NONE, 17:"e" fg=Reset bg=Reset mod=NONE, 18:"s" fg=Reset bg=Reset mod=NONE
07: "                                "
