src/snapshots/redmine_tui_draft__test_support__journals_list_item_component_update_narrower_width.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 18, height: 9 }
00: "aliceが 2026/01/15 " | 0:"a" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 1:"l" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 2:"i" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 3:"c" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 4:"e" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 5:"が" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:"2" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 8:"0" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 9:"2" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 10:"6" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 11:"/" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 12:"0" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 13:"1" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 14:"/" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 15:"1" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 16:"5" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
01: "                  " | 0:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
02: "  ・  担 当 者  を  (な " | 0:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 2:"・" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 5:"担" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 7:"当" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 9:"者" fg=Gray bg=Rgb(26, 51, 34) mod=BOLD, 11:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 12:"を" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 15:"(" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC, 16:"な" fg=Gray bg=Rgb(26, 51, 34) mod=ITALIC
03: "                  " | 0:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
04: "first paragraph   " | 0:"f" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:"i" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:"s" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:"t" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:"g" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:"h" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
05: "                  " | 0:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
06: "second paragraph  " | 0:"s" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:"e" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"c" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:"o" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:"n" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:"d" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"g" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:"h" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
07: "with wrapping     " | 0:"w" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:"i" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"t" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:"h" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:"w" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:"i" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"n" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:"g" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
08: "words             " | 0:"w" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:"o" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:"d" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:"s" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
